--- a/CMOV_Stocks/CMOV_Stocks/CMOV_Stocks.Android/CMOV_Stocks.Android.csproj
+++ b/CMOV_Stocks/CMOV_Stocks/CMOV_Stocks.Android/CMOV_Stocks.Android.csproj
@@ -104,7 +104,10 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="check_icon.png" />
+    <AndroidResource Include="Resources\drawable\check.png" />
+    <AndroidResource Include="Resources\drawable\check2.png" />
     <Content Include="Resources\drawable\check_icon.png" />
+    <AndroidResource Include="Resources\drawable\check_icon2.png" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
 </Project>
